# nova_prototype

./: README.md
nova_bringup/: CMakeLists.txt  package.xml
nova_bringup/config/: ekf_gps_nav2.yaml
nova_bringup/launch/: gazebo.launch.py  gps.launch.py
nova_description/: CMakeLists.txt  package.xml
nova_description/urdf/: nova_camera.urdf  nova_gps.urdf
nova_gazebo/: CMakeLists.txt  package.xml
nova_gazebo/worlds/: my_world.sdf
